--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "scrollreveal": "^4.0.9",
+    "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
