--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/accordion": "^2.1.11",
+    "@chakra-ui/react": "^2.6.0",
+    "@material-tailwind/react": "^1.4.2",
+    "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
